@@ -92,22 +92,25 @@ extern void MoveListCreate(hintdata *phd)
 	}
 	else
 	{
-		gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_RANK], gtk_cell_renderer_text_new(), "text", ML_COL_RANK, "foreground", ML_COL_FGCOL + offset, NULL);
-		gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_TYPE], gtk_cell_renderer_text_new(), "text", ML_COL_TYPE, "foreground", ML_COL_FGCOL + offset, NULL);
+	    GtkCellRenderer *renderer = gtk_cell_renderer_text_new ();
+		g_object_set(renderer, "ypad", 0, NULL);
+
+		gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_RANK], renderer, "text", ML_COL_RANK, "foreground", ML_COL_FGCOL + offset, NULL);
+		gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_TYPE], renderer, "text", ML_COL_TYPE, "foreground", ML_COL_FGCOL + offset, NULL);
 
 		if (phd->fDetails)
 		{
-			gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_WIN], gtk_cell_renderer_text_new(), "text", ML_COL_WIN, "foreground", ML_COL_FGCOL + offset, NULL);
-			gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_GWIN], gtk_cell_renderer_text_new(), "text", ML_COL_GWIN, "foreground", ML_COL_FGCOL + offset, NULL);
-			gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_BGWIN], gtk_cell_renderer_text_new(), "text", ML_COL_BGWIN, "foreground", ML_COL_FGCOL + offset, NULL);
-			gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_LOSS], gtk_cell_renderer_text_new(), "text", ML_COL_LOSS, "foreground", ML_COL_FGCOL + offset, NULL);
-			gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_GLOSS], gtk_cell_renderer_text_new(), "text", ML_COL_GLOSS, "foreground", ML_COL_FGCOL + offset, NULL);
-			gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_BGLOSS], gtk_cell_renderer_text_new(), "text", ML_COL_BGLOSS, "foreground", ML_COL_FGCOL + offset, NULL);
+			gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_WIN], renderer, "text", ML_COL_WIN, "foreground", ML_COL_FGCOL + offset, NULL);
+			gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_GWIN], renderer, "text", ML_COL_GWIN, "foreground", ML_COL_FGCOL + offset, NULL);
+			gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_BGWIN], renderer, "text", ML_COL_BGWIN, "foreground", ML_COL_FGCOL + offset, NULL);
+			gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_LOSS], renderer, "text", ML_COL_LOSS, "foreground", ML_COL_FGCOL + offset, NULL);
+			gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_GLOSS], renderer, "text", ML_COL_GLOSS, "foreground", ML_COL_FGCOL + offset, NULL);
+			gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_BGLOSS], renderer, "text", ML_COL_BGLOSS, "foreground", ML_COL_FGCOL + offset, NULL);
 		}
 
-		gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_EQUITY], gtk_cell_renderer_text_new(), "text", ML_COL_EQUITY + offset, "foreground", ML_COL_FGCOL + offset, NULL);
-		gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_DIFF], gtk_cell_renderer_text_new(), "text", ML_COL_DIFF + offset, "foreground", ML_COL_FGCOL + offset, NULL);
-		gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_MOVE], gtk_cell_renderer_text_new(), "text", ML_COL_MOVE + offset, "foreground", ML_COL_FGCOL + offset, NULL);
+		gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_EQUITY], renderer, "text", ML_COL_EQUITY + offset, "foreground", ML_COL_FGCOL + offset, NULL);
+		gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_DIFF], renderer, "text", ML_COL_DIFF + offset, "foreground", ML_COL_FGCOL + offset, NULL);
+		gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(view), -1, aszTitleDetails[ML_COL_MOVE], renderer, "text", ML_COL_MOVE + offset, "foreground", ML_COL_FGCOL + offset, NULL);
 	}
 
 	phd->pwMoves = view;
